yay! note splash

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
-Add Light Note [Done]
+Add Light Note [In Progress...]
 Add Note Glow [Done]
 Add Sick, good, bad, shit gui [Done]
 Add Lua System [In Progress...]
 Remake FPS Setting [Done]
 Fix Options text [Done]
+Add MiddleScroll [In Progress...]
+Add Note Splash [In Progress...]
+Fix Downscroll [Done]
