complete fixed stuff tab in charting state

--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
-Add Light Note [In Progress...]
-Add Note Glow [Done]
-Add Sick, good, bad, shit gui [Done]
-Add Lua System [In Progress...]
+0.0.6.5:
 Remake FPS Setting [Done]
 Fix Options text [Done]
-Add MiddleScroll [In Progress...]
-Add Note Splash [In Progress...]
-Fix Downscroll [Done]
+Add Note Splash [Done]
+Fix Downscroll [Done (May wont work perfectly)]
+Fix Stuff Tab [In Progress...]
+Added Chart Folder [Done]
+Remove unuse list file [Done]
+Make the Font hint on Charting State bigger [Done]
+Make FPS, Memory Counter Font bigger [Done]
