edit all the rest file

--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
+ALL TODO TO UPDATE THIS ENGINE
+
 0.0.6.5:
 Remake FPS Setting [Done]
 Fix Options text [Done]
 Add Note Splash [Done]
 Fix Downscroll [Done (May wont work perfectly)]
-Fix Stuff Tab [In Progress...]
+Fix Stuff Tab [Done]
 Added Chart Folder [Done]
 Remove unuse list file [Done]
 Make the Font hint on Charting State bigger [Done]
